--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -71,6 +71,10 @@
 				<li>
 					<a class="page-scroll" href="/events/" rel="nofollow" data-no-turbolink>活動吧</a>
 				</li>
+				<li>
+					<a class="page-scroll" href="/calendar" rel="nofollow" data-no-turbolink>行事曆</a>
+					<div class="beta-box">beta</div>
+				</li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li>
