--- a/app/views/calendar/index.html.erb
+++ b/app/views/calendar/index.html.erb
@@ -11,8 +11,7 @@
       <div class="row" id="cal-month">
         <div class="btn-month" id="pre-month"><</div>
         <div class="sel-month">
-          <h2>>.0   
-          </h2>
+          <h2>1月 1970</h2>
         </div>
         <div class="btn-month" id="next-month">></div>
       </div>
@@ -235,7 +234,7 @@
     <li data-class="tag-bell" data-button="Next" data-options="tipLocation:left">
       <h4>近期活動提醒</h4>
       <p>在這裡可以看到最近的活動
-        <br>還有<font color="red">作業Deadline</font>的倒數
+        <br>還有<font color="yellow">作業Deadline</font>的倒數
         <br>不怕作業逾期忘了交!!
       </p>
     </li>
@@ -248,17 +247,17 @@
     </li>
     <li data-class="box-today" data-button="Next" data-options="tipLocation:top">
       <h4>今天</h4>
-      <p>淡藍色框顯示今天的日期</p>
+      <p>預設此淡藍色框表示<font color="yellow">今天的日期</font></p>
     </li>
     <li data-id="btn-cale" data-button="Next" data-options="tipLocation:bottom">
       <h4>當日所有事件檢視</h4>
-      <p>在月曆點擊一個日期就能觀看當日的所有事件!</p>
+      <p>在左方月曆點擊一個日期就能觀看<font color="yellow">當日的所有事件</font>!</p>
     </li>
 
     <li data-text data-button="搶先使用!">
-      <h4>測試版本</h4>
+      <h4>行事曆Beta</h4>
       <p>目前尚在測試版本，
-        <br>僅有e3公告及作業死線的提醒功能，
+        <br>僅有<font color="yellow">e3公告</font>及<font color="yellow">作業死線</font>的提醒功能，
         <br>其他更方便的功能敬請期待!!
       </p>
     </li>
