Add a button for user to delete courses which is already in ShoppingCart at Simulation page.

--- a/app/views/courses/search/_xtmpl_results_mini.html.erb
+++ b/app/views/courses/search/_xtmpl_results_mini.html.erb
@@ -78,7 +78,10 @@
 									<span class="glyphicon glyphicon-plus"></span>
 								</button>
 							{% }else if(o.use_type=="delete"){ %}
-								<button title="刪除" class="btn btn-warning btn-circle" onclick="add_to_cart({%=cd.id%},'delete')">
+								<button title="加選" class="btn btn-success btn-circle " onclick="addCourseSimulation($(this), {%=cd.id%}, '{%=cd.time%}', 'add','search')">
+									<span class="glyphicon glyphicon-plus"></span>
+								</button>
+								<button title="取消收藏課程" class="btn btn-warning btn-circle" onclick="add_to_cart({%=cd.id%},'delete')">
 									<span class="glyphicon glyphicon-minus"></span>
 								</button>
 							{% } %}
