--- a/app/views/courses/tutorial.html.erb
+++ b/app/views/courses/tutorial.html.erb
@@ -7,7 +7,7 @@
 
 		<div class="row">
 			<div class="group">
-				<caption>模擬排課</caption>
+				<caption>超級模擬排課</caption>
 			</div>
 			<div class="step">
 				<div class="title-blk col-xs-12">
