--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -7,7 +7,7 @@
 	box-shadow: -3px -2px 79px -2px rgba(0,0,0,0.75);background:#222 100%
 }
 #intro{
-	background-color:#ffffff;
+	background-color:#023454;
 }
 
 .main tr{ 
@@ -42,7 +42,7 @@ td.date{
 		<div class="header-content-inner ">
 			<div class="header-left ">
 				<h1>NTHU+</h1>
-				<h3 style="position:relative;padding-top:-20px">交大智慧校園系統</h3>
+				<h3 style="position:relative;padding-top:0px">交大智慧校園系統</h3>
 				<h4 class="parallelogram2">Brilliant College Life</h4>		
 				<div class="tabs-block hidde">
 					<div class="hr-left"></div>
