--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -65,7 +65,7 @@ td.date{
 						</li>
 						<li>
 							<input type="radio" name="tabs" id="tab2" />
-							<label for="tab2"><h5>最新消息</h5></label>
+							<label for="tab2"><h5>哈哈哈哈</h5></label>
 							<div id="tab-content1" class="tab-content">
 								<table class="main" style="width:100%;">
 									<tbody>
