Try to fix .css not found problem which is wierd

--- a/app/views/calendar/index.html.erb
+++ b/app/views/calendar/index.html.erb
@@ -1,6 +1,6 @@
 <% content_for :custom_assets do %>
   <%= stylesheet_link_tag "calendar" %>
-  <%= javascript_include_tag "calendar/index", "data-turbolinks-track" => true %>
+  <%= javascript_include_tag "calendar/index", "data-turbolinks-track" => false %>
 <% end %>
 
 <div class="bg1 bg-blur"></div>
