--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -41,8 +41,8 @@ td.date{
 		<div class="container">
 		<div class="header-content-inner ">
 			<div class="header-left ">
-				<h1>NCTU+</h1>
-				<h3 style="position:relative;padding-top:-20px">交大智慧校園系統</h3>
+				<h1>NCTU++</h1>
+				<h3 style="position:relative;padding-top:-20px">交大校園系統</h3>
 				<h4 class="parallelogram2">Brilliant College Life</h4>		
 				<div class="tabs-block hidde">
 					<div class="hr-left"></div>
