--- a/app/assets/stylesheets/member/introduction.css
+++ b/app/assets/stylesheets/member/introduction.css
@@ -5,126 +5,95 @@ Image credits: unsplash.com, uifaces.com/authorized
 Image placeholders: placemi.com
 */
 
-
-#t-cards {
-    padding-top: 80px;
-    padding-bottom: 80px;
-
+body{
+    background-color: #3C3F3F !important;
 }
 
-/********************************/
-/*          Panel cards         */
-/********************************/
-.panel.panel-card {
-    position: relative;
-    height: 380px;
-    border: none;
-    overflow: hidden;
-    background-color: #f8bbd0;
-}
-.panel.panel-card .panel-heading {
-    position: relative;
-    z-index: 2;
-    height: 200px;
-    border-bottom-color: #fff;
-    overflow: hidden;
-    
-    -webkit-transition: height 600ms ease-in-out;
-            transition: height 600ms ease-in-out;
-}
-.panel.panel-card .panel-heading img {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    z-index: 1;
-    width: 120%;
-    
-    -webkit-transform: translate3d(-50%,-50%,0);
-            transform: translate3d(-50%,-50%,0);
-}
-.panel.panel-card .panel-heading button {
-    position: absolute;
-    top: 10px;
-    right: 15px;
-    z-index: 3;
-}
-.panel.panel-card .panel-figure {
-    position: absolute;
-    top: auto;
-    left: 50%;
-    z-index: 3;
-    width: 70px;
-    height: 70px;
-    background-color: #fff;
-    border-radius: 50%;
-    opacity: 1;
-    -webkit-box-shadow: 0 0 0 3px #fff;
-            box-shadow: 0 0 0 3px #fff;
-    
-    -webkit-transform: translate3d(-50%,-50%,0);
-            transform: translate3d(-50%,-50%,0);
-    
-    -webkit-transition: opacity 400ms ease-in-out;
-            transition: opacity 400ms ease-in-out;
-}
+#whole{
+        background-color: #3C3F3F;
+        position:absolute;
+        top:0;
+        left:0;
+      }
 
-.panel.panel-card .panel-body {
-    padding-top: 40px;
-    padding-bottom: 50px;
-    background-color: #fff;
+#left{
+       font-family: "Microsoft JhengHei";
+       width:30%;
+       float:left;
+       height: 100%;
+     }
 
-    -webkit-transition: padding 400ms ease-in-out;
-            transition: padding 400ms ease-in-out;
-} 
+#right{
+       width:70%;
+       float:left;
+       margin-bottom: 2%;
+       overflow: inherit;
+      }
 
-.panel.panel-card .panel-thumbnails {
-    padding: 0 15px 20px;
-}
-.panel-thumbnails .thumbnail {
-    width: 60px;
-    max-width: 100%;
-    margin: 0 auto;
-    background-color: #fff;
-} 
+#word1{
+       color: #FCFCFC;
+       font-weight:300;
+       font-size: 32px;
+       margin-top:30%;
+       text-align: center;
+       }
+
+#word2{
+       color: #FCFCFC;
+       font-weight:100;
+       font-size: 25px;
+       text-align: center;
+      }
+
+#line{
+       text-align:center;
+       width: 40px;
+       height: 60px;
+       position: relative;
+       margin-left: 45%;
+      }
+
+.pimg{
+       position: relative;
+       left: 0;
+       top:0;
+       width: 100%;
+       height:100%;
+       z-index: 50;
+      }
+
+.pimg:hover{
+    z-index:-1
+  }
+
+.member{
+       width: 225px;
+       height:225px;
+       margin-left: 2%; 
+       float:left;
+       margin-top: 2%
+       }
+
+.inside{
+       background-color: hsla(0,0%,90%,0.84);
+       width: 225px;
+       height:225px;
+       position: relative;
+       top:-100%;
+       left:0;
+       }
+
+.inside p{
+       text-align: center;
+       color:#0DA4DB;
+       vertical-align:middle;
+      }
+
+.inside:hover{
+    z-index: 100;
+  }
 
 
-.panel.panel-card:hover .panel-heading {
-    height: 90px;
-    
-    -webkit-transition: height 400ms ease-in-out;
-            transition: height 400ms ease-in-out;
-}
-.panel.panel-card:hover .panel-figure {
-    opacity: 0;
-    
-    -webkit-transition: opacity 400ms ease-in-out;
-            transition: opacity 400ms ease-in-out;
-}
-.panel.panel-card:hover .panel-body {
-    padding-top: 20px;
-    
-    -webkit-transition: padding 400ms ease-in-out;
-            transition: padding 400ms ease-in-out;
-}
 
-.valign-wrapper {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center; }
-  .valign-wrapper .valign {
-    display: block; }
 
-.left-align {
-  text-align: left; }
 
-.right-align {
-  text-align: right; }
-
-.center, .center-align {
-  text-align: center; }
