Add css/js for tutorial

--- a/app/views/frontend/index.html.erb
+++ b/app/views/frontend/index.html.erb
@@ -1,6 +1,12 @@
+<head>
+	<%= stylesheet_link_tag "frontend" %>
+	<%= javascript_include_tag "frontend/index", "data-turbolinks-track" => true %>
+</head>
+
 <h1>QQ</h1>
 <h1> 前端哈哈哈</h1>
 <h2>我偷偷加了一行哈哈</h2>
 <h1> 前端哈哈哈</h1>
 <h2>我偷偷加了一行哈哈</h2>
 <h1> 前端哈哈哈，我加了一點</h1>
+<div class="something-loop"><h2>SOMETHING LOOP</h2></div>
