--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -253,17 +253,18 @@
                .html('<%=fa_icon "share-square-o"%>') 
                .attr("title", "分享課表")
                .attr("data-clipboard-text", "<%=j root_url %>shares/"+url);
-    var client = new ZeroClipboard( $but ); //set up click-copy event  
-    client.on( "ready", function( readyEvent ) {
-      client.on( "aftercopy", function( event ) {
-        // `this` === `client`
-        // `event.target` === the element that was clicked
-        //event.target.style.display = "none";
-        //alert("Copied text to clipboard: " + event.data["text/plain"] );
-        toastr["success"]('已複製連結至剪貼簿');
-      });
+    $but.click(function() {
+        value = $(this).data('clipboard-text');
+
+        var $temp = $('<input>');
+        $("body").append($temp);
+        $temp.val(value).select();
+        document.execCommand("copy");
+        $temp.remove();
+
+        toastr["success"]('已複製到剪貼簿');
     });  
-    return $but ;           
+    return $but;
   }
 
 	function calcAvgScore(courses,pass_score,last_sem_name){
