Revise course hover/normal style. Change text on simulation page alert.

--- a/app/assets/stylesheets/course.css.scss
+++ b/app/assets/stylesheets/course.css.scss
@@ -88,10 +88,13 @@
 
 .course-link{
   color: #53545d;
-}
-
-.course-link:hover {
-  color: #000;
+  text-decoration: none;
+  &:active, &:visited{
+    color: #53545d;
+  }
+  &:hover{
+    color: #6375ff;
+  }
 }
 
 .tabs-below, .tabs-right, .tabs-left {
