Add alert on user page. Change text on simulation page alert.

--- a/app/views/courses/simulation.html.erb
+++ b/app/views/courses/simulation.html.erb
@@ -20,10 +20,8 @@
 	<div class="col-xs-12">
 		<div class="alert alert-warning simulation-alert" onclick="hideGeneralCourseError()">
 		<strong>Important!</strong> </br>
-			</br>
-			‧ 試試看! 按下課表上的課程，為該課程 <font color="red">評個分</font> 或 <font color="red">寫些心得</font> 吧! 你的小小回饋， NCTU+ 將會感激不盡。 </br>
-			</br>
-			‧ 適應新制通識的版本尚在趕工當中，請各位再等一等! </br>
+			　‧ 試試看吧，按下課表上的課程，即可進入該課程介紹。 </br>
+			　‧ 適應新制通識的版本尚在趕工當中，請各位再等一等 ! </br>
 		</div>
 	</div>
   
