修改跳脫字元

--- a/app/views/courses/search/_search_js.html.erb
+++ b/app/views/courses/search/_search_js.html.erb
@@ -5,7 +5,7 @@
   }
   function change_degree(obj){
     var dept_sel=[];
-    dept_sel['0']='<option value=\"\">系所<\/option>\n<%=j render "courses/search/common_options" %>'
+    dept_sel['0']='<option value="">系所</option>\n<%=j render "courses/search/common_options" %>'
     dept_sel['1']='<%=j render "courses/search/undergrad_options" %>'
     dept_sel['2']='<%=j render "courses/search/common_options" %>'
     dept_sel['3']='<%=j render "courses/search/graduate_options" %>'
