Fix 入學年度 showing and auto select not working

--- a/app/views/course_maps/public/_xtmpl_course_table.html.erb
+++ b/app/views/course_maps/public/_xtmpl_course_table.html.erb
@@ -2,7 +2,7 @@
 	{% var cm=o.course_map; %}
 	<h3 id="title" style="line-height:160%">		
 		<b>{%= o.dept_name %} 入學年度:
-			<%=params[:year]%>
+			<%=@year%>
 		</b>
 		{% if(cm){ %}
 			<b>畢業學分:{%=cm.total_credit%}</b>
